# cogmind-launcher

./: CMakeLists.txt  README.md  design.txt
res/css/: main.css
res/glade/: mockup.glade  mockup.glade~
src/: CMakeLists.txt  CogmindLauncher.cpp  CogmindLauncher.h  LauncherWindow.cpp  LauncherWindow.h  main.cpp
user/: advanced.cfg  options.cfg  system.cfg
